@@ -5579,6 +5579,17 @@ such as the coordinates of the mouse pointer at the time the button
 was pressed.  There are several different types of <literal>GdkEvent</literal>
 structures for the various events.
 </para>
+
+<sect2>
+<title>Signal Handler sequence</title>
+<para>By default, your signal handlers are called after any previously-connected signal handlers. However, this can be a problem with the X Event signals. For instance, the existing signal handlers, or the default signal handler, might return true to stop other signal handlers from being called. To specify that your signal handler should be called before the other signal handlers, so that will always be called, you can specify <literal>false</literal> for the optional <literal>after</literal> parameter. For instance,
+<programlisting>
+button.signal_button_press_event().connect( sigc::ptr_fun(&amp;on_mywindow_button_press), false );
+</programlisting>
+</para>
+ 
+</sect2>
+
 </sect1>
 
 </appendix>
