@@ -1,3 +1,9 @@
+2005-05-06  Murray Cumming <murrayc@murrayc.com>
+
+	* docs/tutorial/gtkmm-tut.xml: Signals apendix, 
+	X Event signals section: Added explanation of
+	connect(slot, false);
+
 2005-05-03  Murray Cumming <murrayc@murrayc.com>
 
 	* gtk/gtkmm/comboboxentrytext.cc: 
